# bloom-tui

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
bloom/: __init__.py
colourup/: __init__.py  pinput.py  title.py
colourup/ansi/: __init__.py  bg.py  fg.py  styles.py
colourup/styles/: __init__.py
tests/: test_main.py
