[project]
name = "bloom-tui"
version = "0.2.0"
description = "Utility to make you terminal apps shine"
authors = [
    {name = "Piker98988",email = "111224605+Piker98988@users.noreply.github.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "getch (>=1.0,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "bloom" },
]